Fix downloadSection alignment to the center on Firefox

--- a/src/screens/Literature/styles.module.sass
+++ b/src/screens/Literature/styles.module.sass
@@ -71,6 +71,7 @@
 
 .downloadSection
   display: flex
+  justify-content: center
   gap: 1rem
 
 .patterns
